# crdt-accure

./: CITATION.ccf  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
accure-client/: Cargo.toml
accure-client/src/: lib.rs  main.rs  send.rs  ui.rs
accure-core/: Cargo.toml
accure-core/src/: automerge_bridge.rs  compensation.rs  dag.rs  dot.rs  integrate.rs  lib.rs  messages.rs  op.rs  state.rs  validity.rs  wire.rs
accure-core/src/model/: document.rs  mod.rs  policy.rs
accure-core/tests/: convergence_proptest.proptest-regressions  convergence_proptest.rs  paper_figures.rs
accure-server/: Cargo.toml
accure-server/src/: client.rs  main.rs  peer.rs  visualize.rs
accure-server/tests/: two_server_convergence.rs
docs/diagrams/: bulk_undo_redo.mmd  fig1_policy_convergence.mmd  fig2_compensation.mmd  random_interleavings.mmd  validity_intervals.mmd
