[workspace]
resolver = "2"
members = ["accure-core", "accure-server", "accure-client"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
publish = false

[workspace.dependencies]
accure-core = { path = "accure-core" }
automerge = "0.9"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
proptest = "1"
tempfile = "3"
assert_cmd = "2"

[profile.release]
debug = true
