[package]
name = "accure-core"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
automerge.workspace = true
serde = { workspace = true }
bincode.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["io-util"] }

[dev-dependencies]
proptest.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "io-util"] }
