[package]
name = "accure-server"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
accure-core.workspace = true
automerge.workspace = true
serde.workspace = true
bincode.workspace = true
tokio = { workspace = true, features = ["process"] }
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
